--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_staggered_grid_view: ^0.4.0
   google_fonts: ^2.1.0
   intl: ^0.17.0
   page_transition: 2.0.1-nullsafety.0
