--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   animated_splash_screen: ^1.1.0
+  animations: ^2.0.1
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
