--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: tasks_brz
+name: NotesBRZ
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -27,7 +27,6 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  animated_splash_screen: ^1.1.0
   animations: ^2.0.1
   cupertino_icons: ^1.0.2
   flutter:
@@ -40,6 +39,7 @@ dependencies:
   sqflite: ^2.0.0+4
 
 dev_dependencies:
+  flutter_native_splash: ^1.2.4
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
